# pybrainlife

./: README.md  pyproject.toml
pybrainlife/: __init__.py
pybrainlife/api/: api.py  app.py  datalad.py  dataset.py  datatype.py  project.py  resource.py  task.py  utils.py
pybrainlife/api/compound/: data.py
pybrainlife/cli/: __main__.py  bids.py  data.py  datatype.py  login.py  pipeline.py  utils.py
pybrainlife/data/: collect.py  manipulate.py
pybrainlife/vis/: data.py  plots.py
tests/: def_test_test_brainlife_task.py  test_pybrain_api_utils.py  test_pybrainlife.py  test_pybrainlife_app.py  test_pybrainlife_datalad.py  test_pybrainlife_project.py  test_pybrainlife_resource.py  test_pybrainlife_utils.py
