[tool.poetry]
name = "pybrainlife"
version = "1.0.7"
description = "This project is a collection of functions that are useful for analyzing MRI data derivatives generated on brainlife.io"
authors = ["Brad Caron <bacaron245@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/brainlife/pybrainlife"
repository = "https://github.com/brainlife/pybrainlife"
keywords = ["brainlife"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.9.3"
bctpy = "^0.6.0"
seaborn = "^0.12.2"
jgf = "^0.2.2"
scikit-learn = "^1.0.2"
pandas = "^1.4.3"
scipy = "^1.8.0"
requests = "^2.28.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
